refactor: Add relevant assert statements
The default assertion statements are addded to ensure that the code
behaves as expected